# spring2025-lectures

./: .gitignore  index.html  lecture_01.py  lecture_02.py  lecture_util.py  modal_execute.py  pyproject.toml  references.py
var/traces/: lecture_01.json  lecture_02.json
