[project]
name = "lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edtrace>=0.1.12",
    "einops>=0.8.2",
    "tiktoken>=0.12.0",
]

[tool.uv.workspace]
members = [
    "edtrace/backend",
]

[tool.uv.sources]
edtrace = { workspace = true, editable = true }
